fixed delete btn alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 html {
   font-size: 13px;
 }
+
+.App {
+  padding: 20px;
+}
