--- a/src/components/post-viewer.scss
+++ b/src/components/post-viewer.scss
@@ -6,6 +6,7 @@
   margin-left: 8px;
   margin-right: 8px;
   position: relative;
+  display: grid;
   .heading {
     display: flex;
     justify-content: space-between;
@@ -27,10 +28,11 @@
     align-items: center;
     border-radius: 50%;
     justify-content: center;
-    top: 0;
-    right: 0;
     transform: translate(50%, 200%);
     position: absolute;
+    align-self: center;
+    right: 0;
+    transform: translate(50%);
     svg {
       color: white;
     }
